Document mana pool cauldron interactions
- mention washing off pool color
- add page about crafting manasteel nuggets and blocks after the infusion recipe and somewhat reorder pages to have the layout make more sense
- extend multi-crafting page template processor to allow for an optional second recipe display via the new `botania:crafting_multi_double template`
- remove mention of manasteel blocks/nuggets on the page that already covers dyeing